--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "surge": "^0.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
